# kmi_hackathon

./: .gitignore  .mcp.json  CLAUDE.md  README.md  concept-map.html
.claude/agents/: architect-reviewer.md  document-search.md  explorer.md  graph-traversal.md  image-retrieval.md
.claude/skills/budget-review/: SKILL.md
.claude/skills/gender-tech-review/: SKILL.md
.claude/skills/greet/: SKILL.md
.claude/skills/review-architecture/: SKILL.md
.claude/skills/strategy-review/: SKILL.md
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  post-create.sh  seed.sh
architecture/: README.md  architecture-review-playground.html  claude-plugin-dev-architecture.html  claude-plugin-dev-review.md
poc/: .env.example  README.md  create-ado-board.py  docker-compose.yml  plan.md  start-claude.sh
poc/mcp-servers/strategy-review/: pyproject.toml
poc/mcp-servers/strategy-review/strategy_review_mcp/: __init__.py  server.py
poc/seed/: seed-all.sh
poc/seed/azurite/: seed.py  seed.sh
poc/seed/neo4j/: seed.cypher  seed.sh
poc/seed/opensearch/: chunks.ndjson  create-index.sh  seed.sh
poc/web/: .env.example  next.config.ts  package-lock.json  package.json  sequence-diagram.html
poc/web/app/: globals.css  layout.tsx  page.tsx
poc/web/app/api/chat/: route.ts
poc/web/components/: chat.tsx  message.tsx  skill-selector.tsx
poc/web/lib/: mcp-manager.ts  system-prompts.ts
